[gd_scene load_steps=10 format=3 uid="uid://dohx4lpiray63"]

[ext_resource type="Script" path="res://Assets/Modules/UI/Panels/UISafePanel.gd" id="1_kvryn"]
[ext_resource type="Theme" uid="uid://bsyp7h4vm6uop" path="res://Assets/Modules/UI/Themes/safe_panel_theme.tres" id="3_3vyp5"]
[ext_resource type="Texture2D" uid="uid://ydw42jvr181t" path="res://Assets/Textures/UI/back_button.png" id="3_pnc1g"]
[ext_resource type="Texture2D" uid="uid://crwslh0dmpica" path="res://Assets/Textures/UI/safe_screen.png" id="4_35lxv"]
[ext_resource type="FontVariation" uid="uid://bwqujtxos7yc7" path="res://Assets/Modules/UI/Themes/Beuriful_Police_Variation.tres" id="5_3qjpk"]
[ext_resource type="Texture2D" uid="uid://quq4jo725bjl" path="res://Assets/Textures/UI/safe_nail.png" id="6_hqndp"]
[ext_resource type="Texture2D" uid="uid://kg4sxfg4sm4q" path="res://Assets/Textures/UI/safe_nail_hole.png" id="7_a7uq5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v4gs5"]
texture = ExtResource("4_35lxv")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0

[sub_resource type="LabelSettings" id="LabelSettings_c8ya5"]
font = ExtResource("5_3qjpk")
font_size = 60

[node name="UISafePanel" type="CanvasLayer" node_paths=PackedStringArray("NumberDisplay", "NumberButtons", "DeleteButton", "ClearButton", "TakeButton", "ReturnButton")]
script = ExtResource("1_kvryn")
NumberDisplay = NodePath("Panel/ColorRect/NumberDisplay")
NumberButtons = [NodePath("Panel/Control/Button0"), NodePath("Panel/Control/Button1"), NodePath("Panel/Control/Button2"), NodePath("Panel/Control/Button3"), NodePath("Panel/Control/Button4"), NodePath("Panel/Control/Button5"), NodePath("Panel/Control/Button6"), NodePath("Panel/Control/Button7"), NodePath("Panel/Control/Button8"), NodePath("Panel/Control/Button9")]
DeleteButton = NodePath("Panel/Control/ButtonDelete")
ClearButton = NodePath("Panel/Control/ButtonClear")
TakeButton = NodePath("Panel/TakeButton")
ReturnButton = NodePath("Panel/ReturnButton")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -552.0
offset_top = -236.0
offset_right = -152.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_3vyp5")

[node name="TakeButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_3vyp5")
text = "Enter
"

[node name="ReturnButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = 24.0
offset_right = 72.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_3vyp5")
text = "Close"

[node name="Control" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -116.0
offset_right = 128.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_3vyp5")

[node name="Button1" type="Button" parent="Panel/Control"]
layout_mode = 1
offset_right = 80.0
offset_bottom = 58.0
theme = ExtResource("3_3vyp5")
text = "1"

[node name="Button2" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_right = 40.0
offset_bottom = 58.0
grow_horizontal = 2
theme = ExtResource("3_3vyp5")
text = "2"

[node name="Button3" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 58.0
grow_horizontal = 0
theme = ExtResource("3_3vyp5")
text = "3"

[node name="Button4" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 80.0
offset_bottom = -2.0
grow_vertical = 2
theme = ExtResource("3_3vyp5")
text = "4"

[node name="Button5" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_3vyp5")
text = "5"

[node name="Button6" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -60.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_3vyp5")
text = "6"

[node name="Button7" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 0.5
offset_top = -122.0
offset_right = 80.5
offset_bottom = -64.0
grow_vertical = 0
theme = ExtResource("3_3vyp5")
text = "7"

[node name="Button8" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -122.0
offset_right = 41.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_3vyp5")
text = "8"

[node name="Button9" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -122.0
offset_right = 1.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_3vyp5")
text = "9"

[node name="Button0" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -56.0
offset_right = 40.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_3vyp5")
text = "0"

[node name="ButtonDelete" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -56.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_3vyp5")
icon = ExtResource("3_pnc1g")
icon_alignment = 1
expand_icon = true

[node name="ButtonClear" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_right = 81.0
offset_bottom = 1.0
grow_vertical = 0
theme = ExtResource("3_3vyp5")
text = "C"

[node name="ColorRect" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 336.0
offset_bottom = 104.0
theme = ExtResource("3_3vyp5")
theme_override_styles/panel = SubResource("StyleBoxTexture_v4gs5")

[node name="NumberDisplay" type="Label" parent="Panel/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_3vyp5")
text = "1 2 _ _"
label_settings = SubResource("LabelSettings_c8ya5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="Panel"]
layout_mode = 1
offset_left = 24.0
offset_top = 24.0
offset_right = 51.0
offset_bottom = 51.0
texture = ExtResource("6_hqndp")

[node name="TextureRect3" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 24.0
offset_right = -21.0
offset_bottom = 51.0
grow_horizontal = 0
texture = ExtResource("6_hqndp")

[node name="TextureRect4" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -48.0
offset_right = -21.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_hqndp")

[node name="TextureRect5" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -40.0
offset_right = 49.0
offset_bottom = -23.0
grow_vertical = 0
texture = ExtResource("7_a7uq5")
